Fix styling so that box doesn't jump when contents get larger/smaller

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ button,
 #back-button {
   display: inline-block;
   padding: 5px 15px;
-  margin: 0.5em;
+  margin: 0.5em 0.5em 0 0.5em;
 
   border-radius: 4px;
   border-style: none;
@@ -94,9 +94,9 @@ main {
 
   width: 80%;
   margin: auto;
-  min-height: 60%;
+  height: 75%;
   box-sizing: border-box;
-  padding: 50px 0;
+  padding: 20px 0;
 }
 
 /*****Start*****/
@@ -106,7 +106,7 @@ main {
 
 /*****Quiz-questions*****/
 #quiz-questions > h1 {
-  font-size: 1.5em;
+  font-size: 1.4em;
 }
 
 #timer, 
@@ -124,14 +124,11 @@ main {
 
 #time-remaining{
   color: #4616E8;
-  font-size: 1.4em;
+  /* font-size: 1.4em; */
 }
 
 .choice-status {
-  border-top: 1px solid #CECECE;
-  padding-top: 15px;
-
-  font-size: 1.5em;
+  font-size: 1.35em;
   font-weight: bold;
 }
 
@@ -145,6 +142,13 @@ main {
 
 .fas {
   margin-right: 10px;
+}
+
+/*gray line before choice status*/
+#quiz-questions, 
+#end {
+  border-bottom: 1px solid #CECECE;
+  padding-bottom: 15px;
 }
 
 /*****End*****/
